# Nios-2-Grafic-Card

./: README.md
ips/altera_avalon_new_sdram_controller/: altera_avalon_new_sdram_controller_hw.tcl  em_altera_sodimm.pl  em_new_sdram_controller.pl  em_sdram.pm  em_sdram_qsys.pm  generate_rtl.pl
ips/common/: embedded_ip_hwtcl_common.tcl
quartus/: .gitignore  Makefile  raytracing.qsf  raytracing.qsys
software/: .gitignore  Makefile  compare_images  filter_images.py  settings.bsp
software/opencv/: CMakeLists.txt
software/src/: base64.cpp  base64.h  hwrenderer.h  main.cpp  rtbase.h  swrenderer.cpp  swrenderer.h  testscenes.h  timer.cpp  timer.h  vec3.h  vga.cpp  vga.h
software/src/libfixmath/: fix16.h
vhdl/: top.vhd
vhdl/div/: Makefile  ci_div.vhd  ci_div_tb.vhd  wave.do
vhdl/fast_inverse_sqrt/: .gitignore  Makefile  analyse.txt  analyse_result.cpp  fast_inverse_sqrt.vhd  fast_inverse_sqrt_tb.vhd  generate_testvectors.cpp  tb_expected.txt  tb_result.txt  tb_source.txt  wave.do
vhdl/fast_inverse_sqrt/inverse_sqrt_newton/: inverse_sqrt_newton.vhd
vhdl/fast_inverse_sqrt/ufixpoint_to_ufloat/: .gitignore  Makefile  ufixpoint_to_ufloat.vhd  ufixpoint_to_ufloat_tb.vhd  wave.do
vhdl/fast_inverse_sqrt/ufloat_to_ufixpoint/: Makefile  ufloat_to_ufixpoint.vhd  ufloat_to_ufixpoint_tb.vhd  wave.do
vhdl/mul/: Makefile  ci_mul.vhd  ci_mul_tb.vhd  wave.do
vhdl/my_fifo/: Makefile  fifo_tb.vhd  my_fifo.vhd  wave.do
vhdl/sqrt/: Makefile  mm_avalon_sqrt.vhd  mm_avalon_sqrt_tb.vhd  wave.do
